<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/left_subscriber"
        android:icon="@drawable/ic_subscribe"
        android:title="@string/subscriber" />

    <item
        android:id="@+id/left_notifications"
        android:icon="@drawable/ic_notifications"
        android:title="@string/notifications" />

    <item
        android:id="@+id/left_articles"
        android:icon="@drawable/ic_article"
        android:title="@string/articles" />

    <item
        android:id="@+id/left_authors"
        android:icon="@drawable/ic_author"
        android:title="@string/authors" />

    <item
        android:id="@+id/left_newspapers"
        android:icon="@drawable/ic_newspaper"
        android:title="@string/newspapers" />

    <item
        android:id="@+id/left_read_list"
        android:icon="@drawable/ic_menu_item"
        android:title="@string/read_list" />

    <item
        android:id="@+id/left_search"
        android:icon="@drawable/ic_menu_item"
        android:title="@string/search" />

    <item
        android:id="@+id/left_keyword"
        android:icon="@drawable/ic_menu_item"
        android:title="@string/keyword" />

    <item
        android:id="@+id/left_statistic"
        android:icon="@drawable/ic_menu_item"
        android:title="@string/statistic" />

    <item
        android:id="@+id/left_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings" />

</menu>